Name:               time-cube
Version:            0.0.0.1
License:            BSD3
License-File:       LICENSE
Copyright:          Copyright (c) 2014, Alpha Heavy Industries, Inc. All rights reserved.
Author:             Nathan Howell, Enzo Haussecker, Steve Severance
Maintainer:         enzo@alphaheavy.com
Stability:          Experimental
Category:           Time
Synopsis:           Yet Another Haskell Time Library
Build-Type:         Simple
Cabal-Version:      >= 1.18.0
Description:        Type safe timestamps for real-time applications.

Library
  Default-Language: Haskell2010
  Exposed-Modules:  Data.Time.Cube
                    Data.Time.Cube.Base
                    Data.Time.Cube.Format
                    Data.Time.Cube.Lens
                    Data.Time.Cube.UTC
                    Data.Time.Cube.UTC.Gregorian
                    Data.Time.Cube.Unix
                    Data.Time.Cube.Unix.Gregorian
                    Data.Time.Cube.Zones
                    Foreign.C.Time
  Other-Modules:    Data.Time.Cube.Parser
                    Data.Time.Cube.Utilities
  Build-Depends:    attoparsec,
                    base >= 4 && < 5,
                    bindings-DSL >= 1.0.11 && < 1.1,
                    deepseq,
                    lens,
                    mtl,
                    old-locale,
                    text
  Build-tools:      hsc2hs

Source-Repository head
  Type:             git
  Location:         https://github.com/time-cube/time-cube.git
