Name:               time-cube
Version:            0.1.20150330101655
License:            BSD3
License-File:       LICENSE
Copyright:          Copyright (c) 2015, Alpha Heavy Industries, Inc. All rights reserved.
Author:             Enzo Haussecker, Nathan Howell, Steve Severance, et. al.
Maintainer:         ehaussecker@alphaheavy.com
Stability:          Experimental
Category:           Time
Synopsis:           Typesafe Timestamps
Build-Type:         Simple
Cabal-Version:      >= 1.18.0
Description:        Typesafe timestamps for real-time applications.

Source-Repository head
  Type:             git
  Location:         https://github.com/time-cube/time-cube.git

Library
  Default-Language: Haskell2010
  HS-Source-Dirs:   src
  Exposed-Modules:  Data.Time.Cube
                    Data.Time.Cube.Base
                    Data.Time.Cube.Format
                    Data.Time.Cube.Gregorian
                    Data.Time.Cube.Lens
                    Data.Time.Cube.Local
                    Data.Time.Cube.UTC
                    Data.Time.Cube.Unix
                    Data.Time.Cube.Zone
                    Foreign.C.Time
                    GHC.TypeLits.SigNat
  Other-Modules:    Data.Time.Cube.Gregorian.Local
                    Data.Time.Cube.Gregorian.UTC
                    Data.Time.Cube.Gregorian.Unix
                    Data.Time.Cube.Parser
                    Data.Time.Cube.Utils
  Build-Depends:    attoparsec,
                    base >= 4 && < 5,
                    bytestring,
                    bindings-DSL >= 1.0.11 && < 1.1,
                    deepseq,
                    lens,
                    mtl,
                    old-locale,
                    text,
                    tz >= 0.0.0.10,
                    tzdata
  Build-Tools:      hsc2hs

Test-Suite unit-test
  Default-Language: Haskell2010
  Type:             exitcode-stdio-1.0
  HS-Source-Dirs:   src,
                    test
  Main-Is:          Test.hs
  Other-Modules:    Foreign.C.Time
  Build-Depends:    attoparsec,
                    base >= 4 && < 5,
                    bytestring,
                    bindings-DSL >= 1.0.11 && < 1.1,
                    deepseq,
                    lens,
                    mtl,
                    QuickCheck >= 2.4 && < 2.7,
                    old-locale,
                    text,
                    tz >= 0.0.0.10,
                    tzdata
  Build-Tools:      hsc2hs